@@ -23,13 +23,3 @@ class FileFormat(Component):
 
         self.import_dir = os.path.dirname(os.path.abspath(filename))
 
-    def do_export(self, filename):
-
-        """Make sure fileformats call this implementation first."""
-
-        if not os.path.isabs(filename):
-            filename = os.path.join(self.config()["export_dir"], filename)
-        os.chdir(os.path.dirname(filename))
-
-
-
