@@ -1,4 +1,4 @@
-version = "2.1-pre3"
+version = "2.1-pre4"
 
 if __name__ == "__main__":
     print version
